dev-site-config/IllustrationGrid.scss
$grid: 'tui-illustration-grid';

.#{$grid} {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;

  pre .codeblock {
    white-space: pre-line; // helps with wrapping inside of flexbox
  }
}

.#{$grid}-col {
  flex: 1 0 17em;
}

.#{$grid}-col-illustration {
  padding: 0 2rem;
  text-align: center;
}

.#{$grid}-col-illustration > svg {
  max-width: 30rem;
}

